--- a/index.html
+++ b/index.html
@@ -8,5 +8,28 @@
   		 <h1>Hello World!</h1>
 		<h2>Just checking after pushing first remote commit
 		</h2>
+		<h1> Introductions (10 minutes)</h1>
+•	Objectives for the Hour
+•	Survey of Customer Science knowledge within the group
+ 
+What is the Internet? (5 minutes)
+https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro
+ 
+What is Programming or Coding? (20 minutes)
+https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code
+Let the students complete a portion of the Hands On coding exercise. (15 minutes)
+ 
+Introduce 1 other programming environment (15 minutes)
+MIT Scratch Programming Environment https://scratch.mit.edu/#
+ 
+Retrospective (10 minutes)
+                Q&A
+                What was Good, Bad and Needed Improvements
+Presentation of Hour of Code Certificates 
+ 
+Reference links:
+https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy
+https://hourofcode.com/us/learn
+
 	</body>
 </html>
