--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   		 <h1>Hello World!</h1>
 		<h2>Just checking after pushing first remote commit
 		</h2>
-		<h1> Introductions (10 minutes)</h1>
+		<h1> Introduction</h1>
 		<ul>
-			•	Objectives for the Hour
-			•	Survey of Customer Science knowledge within the group
+			Objectives for the Hour <br>
+			Survey of Customer Science knowledge within the group <br>
 		</ul>
 What is the Internet? (5 minutes)
 https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro
