--- a/index.html
+++ b/index.html
@@ -5,32 +5,29 @@
 		<title>Hello World</title>
 	</head>
 	<body>
-  		 <h1>Hello World!</h1>
-		<h2>Just checking after pushing first remote commit
-		</h2>
 		<h1> Introduction</h1>
 		<ul>
 			Objectives for the Hour <br>
 			Survey of Customer Science knowledge within the group <br>
 		</ul>
-What is the Internet? (5 minutes)
-https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro
+<p>What is the Internet? (5 minutes)
+https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro</p>
  
-What is Programming or Coding? (20 minutes)
+<p>What is Programming or Coding? (20 minutes)
 https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code
-Let the students complete a portion of the Hands On coding exercise. (15 minutes)
+Let the students complete a portion of the Hands On coding exercise. (15 minutes)</p>
  
-Introduce 1 other programming environment (15 minutes)
-MIT Scratch Programming Environment https://scratch.mit.edu/#
+<p>Introduce 1 other programming environment (15 minutes)
+MIT Scratch Programming Environment https://scratch.mit.edu/#</p>
  
-Retrospective (10 minutes)
+<p>Retrospective (10 minutes)
                 Q&A
-                What was Good, Bad and Needed Improvements
-Presentation of Hour of Code Certificates 
+                What was Good, Bad and Needed Improvements</p>
+<p>Presentation of Hour of Code Certificates </p?
  
-Reference links:
+<p>Reference links:
 https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy
-https://hourofcode.com/us/learn
+https://hourofcode.com/us/learn</p>
 
 	</body>
 </html>
