--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
 	<body>
 		<h1> Introduction</h1>
 		<ul>
-			Objectives for the Hour <br>
-			Survey of Customer Science knowledge within the group <br>
+			<li>Objectives for the Hour</li>
+			<li>Survey of Customer Science knowledge within the group <li>
 		</ul>
-<p>What is the Internet? (5 minutes)
-https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro</p>
+<p>What is the Internet? (5 minutes) <br>
+<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro"</a></p>
  
-<p>What is Programming or Coding? (20 minutes)
+<p>What is Programming or Coding? (20 minutes) <br>
 https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code
 Let the students complete a portion of the Hands On coding exercise. (15 minutes)</p>
  
-<p>Introduce 1 other programming environment (15 minutes)
+<p>Introduce 1 other programming environment (15 minutes) <br>
 MIT Scratch Programming Environment https://scratch.mit.edu/#</p>
  
 <p>Retrospective (10 minutes)
-                Q&A
-                What was Good, Bad and Needed Improvements</p>
+<ul>
+                <li> Q&A </li>
+                <li> What was Good, Bad and Needed Improvements</li>
+				</ul>
+				</p>
 <p>Presentation of Hour of Code Certificates </p?
  
-<p>Reference links:
-https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy
+<p>Reference links:<br>
+https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy<br>
 https://hourofcode.com/us/learn</p>
 
 	</body>
