Trying to push my first added commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<li>Survey of Customer Science knowledge within the group <li>
 		</ul>
 <p>What is the Internet? (5 minutes) <br>
-<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro"</a></p>
+<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro">What is the Internet</a></p>
  
 <p>What is Programming or Coding? (20 minutes) <br>
 https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code
