--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 			<li>Objectives for the Hour</li>
 			<li>Survey of Customer Science knowledge within the group </li>
 		</ul>
-<p>What is the Internet? (5 minutes) <br>
-<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro">What is the Internet</a>
+		
+<p>
+<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro">What is the Internet (3 minutes)</a>
 </p>
  
-<p>What is Programming or Coding? (20 minutes) <br>
-https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code
-Let the students complete a portion of the Hands On coding exercise. (15 minutes)
+<p>
+<a href="https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code">What is Programming or Coding? (15 minutes)</a>
 </p>
  
-<p>Introduce 1 other programming environment (15 minutes) <br>
-MIT Scratch Programming Environment https://scratch.mit.edu/#
+<p>
+<a href="https://scratch.mit.edu/#">MIT Scratch Programming Environment
 </p>
  
 <p>Retrospective (10 minutes)
