Trying to push my first added commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </p>
  
 <p>
-<a href="https://scratch.mit.edu/#">MIT Scratch Programming Environment
+<a href="https://scratch.mit.edu/#">MIT Scratch Programming Environment</a>
 </p>
  
 <p>Retrospective (10 minutes)
@@ -31,9 +31,9 @@
 				</p>
 <p>Presentation of Hour of Code Certificates </p>
  
-<p>Reference links:<br>
-https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy<br>
-https://hourofcode.com/us/learn</p>
+<p><h3>Reference links:</h3><br>
+<a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy"</a><br>
+<a href="https://hourofcode.com/us/learn"</a></p>
 
 	</body>
 </html>
