Trying to push my first added commit

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
                 <li> What was Good, Bad and Needed Improvements</li>
 				</ul>
 				</p>
-<p>Presentation of Hour of Code Certificates </p>
  
 <p><h3>Reference links:</h3><br>
-<a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy"</a><br>
-<a href="https://hourofcode.com/us/learn"</a></p>
+<a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy">Learning programming on Khan Academy</a><br>
+<a href="https://hourofcode.com/us/learn">Hour of Code</a></p>
 
 	</body>
 </html>
