Trying to push my first added commit

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 		</ul>
 		
 <p>
-<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro">What is the Internet (3 minutes)</a>
+<a href="https://www.khanacademy.org/computing/hour-of-code/hour-of-html/v/making-webpages-intro">What is the Internet</a>
 </p>
  
 <p>
-<a href="https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code">What is Programming or Coding? (15 minutes)</a>
+<a href="https://www.khanacademy.org/computing/computer-programming/programming/drawing-basics/pt/making-drawings-with-code">What is Programming or Coding?</a>
 </p>
  
 <p>
 <a href="https://scratch.mit.edu/#">MIT Scratch Programming Environment</a>
 </p>
  
-<p>Retrospective (10 minutes)
+<p><h2>Retrospective (10 minutes)</h2>
 <ul>
                 <li> Q&A </li>
                 <li> What was Good, Bad and Needed Improvements</li>
 				</ul>
 				</p>
  
-<p><h3>Reference links:</h3><br>
+<p><h3>Reference links:</h3>
 <a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy">Learning programming on Khan Academy</a><br>
 <a href="https://hourofcode.com/us/learn">Hour of Code</a></p>
 
