Trying to push my first added commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Hello World</title>
+		<style>
+            body {
+                font-family: Arial, sans-serif;
+                background: rgb(222, 253, 255);
+            }
+        </style>
 	</head>
 	<body>
 		<h1> Introduction</h1>
@@ -33,6 +39,12 @@
 <p><h3>Reference links:</h3>
 <a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy">Learning programming on Khan Academy</a><br>
 <a href="https://hourofcode.com/us/learn">Hour of Code</a></p>
+
+<script>
+            var four = 2 + 2;
+            console.log("Wheeee!"); // cmd-opt-I, ctrl-option-I 
+            document.body.innerHTML = "Woooo, I'm all up in your webpage!";
+        </script>
 
 	</body>
 </html>
